# Apex

./: .gitignore  .pdm.toml  Dockerfile  Dockerfile.backend  Dockerfile.celery  Pipfile  README.md  alembic.ini  config.py  docker-compose.yml  gunicorn.conf.py  main.py  models.py  nohup.out  nohup.put  pyproject.toml  pytest.ini  run.sh
alembic/: env.py
alembic/versions/: 01c9060485cc_initial_migration.py  50419a6d04d1_添加role表.py
casbin/: casbin_jwt_demo.py  rbac_policy.csv
conf/: celery.conf  fastapi_server.conf  gunicorn_conf.py
migrations/models/: 0_20230616152653_init.py  0_20230630134856_init.py  1_20230616153129_update.py  1_20230617184118_None.py  1_20230630135733_update.py  1_20230704105004_update.py  2_20230616154416_update.py  2_20230617184142_update.py  2_20230701145255_update.py  3_20230617180948_update.py  3_20230617185934_update.py  4_20230618093435_update.py  5_20230626205742_update.py  6_20230626213639_update.py
src/: config.py  main.py  models.py  schemas.py
src/api/: __init__.py  admin.py  admin_api.py  comment_api.py  comments.py  config_api.py  sse.py  test.py  testcase.py  testcase_api.py  testenv.py  testsuite.py  user_api.py  users.py
src/autotest/: conftest.py  tester.py
src/autotest/config/: config.yaml
src/autotest/plugin/: sse_plugin.py
src/autotest/test_case/: test_factory.py
src/autotest/utils/: result_process.py
src/controllers/: __init__.py  default.py
src/controllers/autotest/: config.py  testcase.py  testenv.py  testsuite.py
src/controllers/management/: menu.py  task.py  user.py
src/core/: authentication.py  cache.py  custom_metaclass.py  db.py  exception.py  middleware.py  redis.py  security.py
src/core/celery/: celery_app.py  celery_config.py  scheduler.py
src/core/celery/task/: base.py  scheduled_task.py  testcase_task.py
src/core/test/: api_test.py
src/crud/: __init__.py  crud.py
src/db/: __init__.py  base_models.py  enum.py  models.py  settings.py
src/db/models/: autotest.py  menu.py  user.py
src/repositories/: __init__.py
src/repositories/management/: task.py  user.py
src/routes/: __init__.py  comments.py  test.py  users.py
src/schemas/: __init__.py  comment_schema.py  common_schema.py  default.py  generic_schema.py  schemas.py  testcase_schema.py  testenv_schema.py  testsuite_schema.py  user_schema.py
src/schemas/autotest/: config.py  testcase.py  testsuite.py
src/schemas/management/: admin.py  menu.py  task.py
src/services/: __init__.py  role_permission_service.py  user_service.py
src/services/autotest/: testenv.py  testsuite.py
src/services/management/: task.py  user.py
src/utils/: authentications.py  background_task_util.py  excel_util.py  exception_util.py  exceptions_util.py  load_file_util.py  log_util.py  re_util.py  security_util.py  sql_engine.py
src/utils/casbin/: rbac_policy.csv
src/utils/dependency/test/: api_test.py
src/utils/exceptions/: admin.py  common_exception.py  menu.py  task.py  testenv.py  user.py
static/testcase/: 测试用例模板.xlsx
testframe_backend/: config.py  main.py
testframe_backend/src/api/: __init__.py  admin.py  admin_api.py  comment.py  comment_api.py  config.py  config_api.py  default.py  default_api.py  dict.py  menu.py  system_api.py  testcase.py  testcase_api.py  testenv.py  testenv_api.py  testsuite.py  testsuite_api.py  user.py  user_api.py
testframe_backend/src/api/autotest/: config.py  testcase.py  testenv.py  testsuite.py
testframe_backend/src/api/management/: admin.py  menu.py  user.py
testframe_backend/src/autotest/: conftest.py  test_schema.py  tester.py
testframe_backend/src/autotest/plugin/: sse_plugin.py
testframe_backend/src/autotest/test_case/: test_factory.py  test_schema.py
testframe_backend/src/autotest/utils/: result_process.py
testframe_backend/src/autotest/utils/celery/: celery_app.py  celery_config.py
testframe_backend/src/autotest/utils/celery/task/: base.py  scheduled_task.py  testcase_task.py
testframe_backend/src/controllers/: default.py
testframe_backend/src/controllers/autotest/: testcase.py  testsuite.py
testframe_backend/src/controllers/management/: admin.py
testframe_backend/src/core/: authentication.py  cache.py  db.py  exception.py  middleware.py  premission.py  redis.py  security.py
testframe_backend/src/db/: __init__.py  enum.py  models.py  settings.py
testframe_backend/src/db/models/: __init__.py  autotest.py  base_models.py  comments.py  data_dict.py  menu.py  user.py
testframe_backend/src/repositories/: __init__.py
testframe_backend/src/repositories/management/: role.py
testframe_backend/src/schemas/: __init__.py  admin.py  admin_schema.py  comment.py  comment_schema.py  common.py  common_schema.py  data_dict.py  default.py  default_schema.py  menu.py  system_schema.py  testcase.py  testcase_schema.py  testenv.py  testenv_schema.py  testsuite.py  testsuite_schema.py  user.py  user_schema.py
testframe_backend/src/schemas/autotest/: config.py  testcase.py  testenv.py  testsuite.py
testframe_backend/src/schemas/management/: admin.py  menu.py  user.py
testframe_backend/src/services/: __init__.py  data_dict.py  role.py  system.py  system_service.py  testcase.py  testcase_service.py  testenv.py  testenv_service.py  testsuite.py  testsuite_service.py  user.py  user_service.py
testframe_backend/src/services/autotest/: testcase.py  testenv.py  testsuite.py
testframe_backend/src/services/management/: admin.py  role.py  user.py
testframe_backend/src/utils/: background_task_util.py  enum.py  excel_util.py  load_file_util.py  log_util.py  publish_format.py  re_util.py  sql_engine.py
testframe_backend/src/utils/celery/: celery_config.py
testframe_backend/src/utils/celery/task/: testcase_task.py
testframe_backend/src/utils/exceptions/: admin.py  common.py  menu.py  testcase.py  testenv.py  testsuite.py  user.py
tests/: conftest.py  test_admin.py  test_autotest.py  test_login.py  test_user.py
