[tool.poetry]
name = "testframe-backend"
version = "0.1.0"
description = ""
authors = ["RicarTang <357965604@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.2"
tortoise-orm = {extras = ["asyncmy"], version = "^0.20.0"}
gunicorn = "^21.2.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
apscheduler = "^3.10.4"
aerich = "^0.7.2"
casbin = "^1.33.0"
asynccasbin = "^1.1.8"
casbin-tortoise-adapter = "^1.2.1"
aioredis = "^2.0.1"
hiredis = "^2.2.3"
openpyxl = "^3.1.2"
aiofiles = "^23.2.1"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
pytest = "^7.4.3"
sse-starlette = "^1.8.2"
pydantic-settings = "^2.1.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
python-multipart = "^0.0.6"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[tool.aerich]
tortoise_orm = "testframe_backend.src.db.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./testframe_backend/."

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
#celery_server = "celery -A testframe_backend.src.utils.celery.celery_config.celery worker -P gevent -c 1000 --loglevel=INFO"
celery_server = "celery -A testframe_backend.src.utils.celery.celery_config.celery worker --loglevel=INFO"
dev = "uvicorn testframe_backend.main:app --host 0.0.0.0 --port 4000 --reload"
gun_dev = "gunicorn -c gunicorn.conf.py testframe_backend.main:app"
aerich_init = "aerich init -t testframe_backend.src.db.settings.TORTOISE_ORM"
init_db = "aerich init-db"
migrate_db = "aerich migrate"
upgrade_db = "aerich upgrade"
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "RicarTang", email = "357965604@qq.com"},
]
dependencies = [
    "pydantic<3.0.0,>=2.5.2",
    "tortoise-orm[asyncmy]<1.0.0,>=0.20.0",
    "gunicorn<22.0.0,>=21.2.0",
    "passlib<2.0.0,>=1.7.4",
    "python-jose<4.0.0,>=3.3.0",
    "apscheduler<4.0.0,>=3.10.4",
    "aerich<1.0.0,>=0.7.2",
    "casbin<2.0.0,>=1.33.0",
    "asynccasbin<2.0.0,>=1.1.8",
    "casbin-tortoise-adapter<2.0.0,>=1.2.1",
    "aioredis<3.0.0,>=2.0.1",
    "hiredis<3.0.0,>=2.2.3",
    "openpyxl<4.0.0,>=3.1.2",
    "aiofiles<24.0.0,>=23.2.1",
    "pyyaml<7.0.0,>=6.0.1",
    "loguru<1.0.0,>=0.7.2",
    "aiohttp[speedups]<4.0.0,>=3.9.1",
    "pytest<8.0.0,>=7.4.3",
    "sse-starlette<2.0.0,>=1.8.2",
    "pydantic-settings<3.0.0,>=2.1.0",
    "fastapi-cache2[redis]<1.0.0,>=0.2.1",
    "python-multipart<1.0.0,>=0.0.6",
    "fastapi<1.0.0,>=0.104.1",
    "uvicorn[standard]<1.0.0.0,>=0.24.0.post1",
    "celery>=5.3.6",
    "sqlalchemy>=2.0.23",
    "cryptography>=41.0.7",
    "pymysql>=1.1.0",
    "gevent>=23.9.1",
    "requests>=2.31.0",
    "pytest-asyncio>=0.23.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


